Fix to TGeo loading. Should be done via DD4hep.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,19 +16,11 @@ SET( ${PROJECT_NAME}_VERSION_PATCH 0 )
 
 FIND_PACKAGE( ILCUTIL REQUIRED COMPONENTS ILCSOFT_CMAKE_MODULES )
 
-# load default settings from ILCSOFT_CMAKE_MODULES
-#INCLUDE( ilcsoft_default_settings )
-
-
 FIND_PACKAGE( Marlin 1.0 REQUIRED ) # minimum required Marlin version
-#INCLUDE_DIRECTORIES( SYSTEM ${Marlin_INCLUDE_DIRS} )
-#LINK_LIBRARIES( ${Marlin_LIBRARIES} )
-#ADD_DEFINITIONS( ${Marlin_DEFINITIONS} )
+
+FIND_PACKAGE( DD4hep REQUIRED COMPONENTS DDCore )
 
 FIND_PACKAGE( ROOT REQUIRED)
-#INCLUDE_DIRECTORIES( SYSTEM ${ROOT_INCLUDE_DIRS} )
-#LINK_LIBRARIES( ${ROOT_LIBRARIES} )
-#ADD_DEFINITIONS( ${ROOT_DEFINITIONS} )
 
 ### DOCUMENTATION ###########################################################
 
@@ -46,6 +38,9 @@ ADD_SUBDIRECTORY(example)
 # sources
 ADD_LIBRARY(ACTSTracking SHARED
   ./src/ACTSDetectorLoaderProc.cxx
+  ./src/ACTSTruthTrackingProc.cxx
   )
 TARGET_INCLUDE_DIRECTORIES(ACTSTracking PRIVATE ./ACTSTracking ${Marlin_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(ACTSTracking ${ROOT_LIBRARIES} ActsCore ActsPluginTGeo ActsPluginJson)
+TARGET_LINK_LIBRARIES(ACTSTracking
+  ${ROOT_LIBRARIES} DD4hep::DDCore
+  ActsCore ActsPluginTGeo ActsPluginJson)
