Several improvements. - Add `ACTS2Marlin_trackState` function to convert between track state representations - Fix wrong definition of lambda (pi/2 - theta) - `ACTS2Marlin_trackState` is now used by all tracking processors - Improved estimate for the seed's estimated parameters uncertainty - Turn uncertainty estimates for `ACTSSeedingProc` into parameters - Save seeds in `ACTSSeedingProc`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ ADD_LIBRARY(ACTSTracking SHARED
   ./src/ACTSSeedingProc.cxx
   ./src/GeometryIdSelector.cxx
   ./src/GeometryIdMappingTool.cxx
+  ./src/Helpers.cxx
   )
 TARGET_INCLUDE_DIRECTORIES(ACTSTracking PRIVATE ./ACTSTracking ${Marlin_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(ACTSTracking
