--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ ADD_LIBRARY(ACTSTracking SHARED
 TARGET_INCLUDE_DIRECTORIES(ACTSTracking
   PRIVATE
     ./ACTSTracking
-    ${CMAKE_BINARY_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
     ${Marlin_INCLUDE_DIRS}
     ${ROOT_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(ACTSTracking
